<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity_Dosen.Dashboard_dsn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="5dp">

                <ImageView
                    android:id="@+id/Image_icdrawer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_drawer_menu" />

                <TextView
                    android:id="@+id/tvdashboard_dosen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/HomeScreen"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CVProfile_dosen"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="#990000"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal"
                        android:paddingStart="18dp"
                        android:paddingEnd="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/profile_icon" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="20dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/TV_show_full_name_dosen"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nama_dosen"
                                    android:textColor="@color/white"
                                    android:textSize="20dp" />

                                <TextView
                                    android:id="@+id/TV_show_nidn_Dosen"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nidn_dosen"
                                    android:textColor="@color/white"
                                    android:textSize="15dp" />

                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_timetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="TIMETABLE"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="182dp"
                    android:paddingBottom="6dp"
                    android:text="(Hari Ini)"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/see_all_timetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:paddingEnd="20dp"
                    android:text="see all"
                    android:textSize="15dp" />
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVTimetable1"
                        android:layout_width="210dp"
                        android:layout_height="130dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/grey">
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVTimetable2"
                        android:layout_width="210dp"
                        android:layout_height="130dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="#A5BECC">
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVTimetable3"
                        android:layout_width="210dp"
                        android:layout_height="130dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="#5151">
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="ACTIVITY"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:gravity="center_horizontal">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVKehadiran_mhs"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="#EFEFEF"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/kehadiran_icon"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="Kehadiran mahasiswa"
                                android:textSize="12dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVNilai_mhs"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="#EFEFEF"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/transcript_icon"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="Nilai Mahasiswa"
                                android:textSize="12dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CVJadwal_dsn"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardBackgroundColor="#EFEFEF"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardElevation="5dp"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/calendar_icon"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="Jadwal" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="left"
                android:paddingStart="5dp"
                android:paddingTop="5dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/CVNews"
                    android:layout_width="210dp"
                    android:layout_height="130dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="#A5BECC">
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </HorizontalScrollView>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview_dsn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu_dsn" />

</androidx.drawerlayout.widget.DrawerLayout>